Initial commit - technicalDocs page -- index.html, main.css, 	main.js
	modified:   .gitignore
	renamed:    projects/1.1_tributePage/tribute.html -> projects/1.1_tributePage/index.html
	renamed:    projects/1.1_tributePage/tribute.css -> projects/1.1_tributePage/main.css
	modified:   projects/1.2_surveyForm/index.html
	modified:   projects/1.2_surveyForm/main.css
	new file:   projects/1.4_technicalDocs/index.html
	new file:   projects/1.4_technicalDocs/main.css
	new file:   projects/1.4_technicalDocs/main.js

--- a/projects/1.1_tributePage/index.html
+++ b/projects/1.1_tributePage/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="tribute.css">
+    <link rel="stylesheet" href="main.css">
     <title id='title'>Henry Ford Tribute</title>
   </head>
   <body>
@@ -17,13 +17,13 @@
     </div>
       <div class="content">
         <div id="img-div">
-          <img src="/1-WebDesign/1-TributePage/images/use_ModelT1908_788x359px.png" alt="1908 Model T" id='image'>
+          <img src="images/use_ModelT1908_788x359px.png" alt="1908 Model T" id='image'>
           <p id='img-caption'>1908 Model T</p>
           
         </div>
         <div id="tribute-info">
           <div id="portrait">
-              <img src="/1-WebDesign/1-TributePage/images/use_HenryFord1919_392x500px.jpg" alt="Henry Ford in 1919" id='portraitImg'>
+              <img src="images/use_HenryFord1919_392x500px.jpg" alt="Henry Ford in 1919" id='portraitImg'>
               <p id='portraitCaption'>Henry Ford - 1919</p>
           </div>
           <!--import/link font styles for header and figure out smart quotes for quote. finish formatting-->
@@ -62,10 +62,9 @@
 
 
 
-    <div class="footer">
-      <p id='footer'>I do not own rights to the images used on this page.</p>
-      <p id='footer'>Page by tbycoding</p>
-    </div>
+    <footer class="footer">
+      <div class='footer'>I do not own rights to the images used on this page.<br>Page by tbycoding</div>
+    </footer>
 
     <script type='text/javascript' src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
   </body>
