--- a/projects/1.2_surveyForm/index.html
+++ b/projects/1.2_surveyForm/index.html
@@ -68,7 +68,7 @@
           <option value="percussion">Percussion</option>
           <option value="keyboard">Keyboard</option>
           <option value="computer generated">Computer</option>
-          <option value="no clue">What's that?</option>
+          <option value="no clue">What's a music?</option>
         </select>
         <label for="artist" id='favArt'>Favorite Artist: </label>
         <input type="text" id="artist" placeholder="Enter favorite artist.">
@@ -77,8 +77,10 @@
         <label id='commentsL' for="comments">Comments: </label>
         <textarea name="comments" id="comments" cols="30" rows="5" placeholder='Enter any comments.'></textarea>
       </div>
-        <button type='submit' id="submit">Submit</button>
     </form>
+    <div class='submit'>
+      <button type='submit' id="submit">Submit</button>
+    </div>
   </div>
 
   
